Changes in 2.0.0:
  o Client Changes:
    * Added getTroveLatestByLabel as a client-side call
    * Most repository exceptions are demarshalled using logic in the
      exception class itself rather than in a large if/elif block (CNY-747)

  o Server Changes:
    * Fixed scoring for target flavor sets (CNY-1539)
    * Setting/resetting the admin field permission is handled now by the
      setUserGroupIsAdmin() call instead of addAcl/editAcl (CNY-1782)
    * Removed (unimplemented) concept of caps for permissions
    * Added @requireClientProtocol decorator for server methods
    * Renamed usergroups to roles in the repository web user interface
      (CNY-1973)
    * Reworked server exceptions to have marshalling logic in the exception
      class instead of in a large if/elif block (CNY-747)
    * Call log now tracks cache misses (CNY-1843)
    * Repository no longer passes anonymous-hint to proxy layer (it has
      been False since 1.1.29)
    * Server exceptions are marshalled in the proxy layer now instead of
      in both the proxy and server layers
    * When the repository database is locked, RepositoryLocked exceptions
      are now returned for all code paths (CNY-1596)

o Protocol Changes:
    * Protocol allows passing keyword arguments for exceptions (CNY-747)
    * No longer include useAnonymous flag in return value

Changes in @NEW@:
  o Build Changes:
    * A bug which caused Conary to incorrectly determine the flags
      for python dependencies on 64-bit systems has been fixed.
      (CNY-2091)

Changes in 1.2.0:
  o Build Changes:
    * A bug which caused Conary to compute python dependencies
      incorrectly when using an external version of python (such
      as when building python itself) has been fixed. (CNY-2087)

Changes in 1.1.96:
  o Server Changes
    * External entitlement servers can now specify per-entitlement
      timeouts and automatic retry values (CNY-2060)

  o Client Changes: